# EnsiGG-League-of-Legends-Comprehensive-Platform

./: README.md  Retour_prerapport.md
backend/: .gitignore  LICENSE  README.md  pyproject.toml
backend/backend_lol/: controllers.py  database.db  helpers.py  init_db.py  models.py  new_backend.db  services.py  test_champions.py  test_controllers.py  test_league.py  test_match.py  test_personnage.py  test_summoner_info.py
backend/backend_lol/champions/: champion_dto.py  champion_svc.py
backend/backend_lol/match/: info_dto.py  match_dto.py  match_svc.py  metadata_dto.py  participant_dto.py  perks_dto.py  teams_dto.py
backend/backend_lol/match/models/: info_dto.py  match_dto.py  teams_dto.py
backend/backend_lol/user/: user_dto.py  user_svc.py
backend/websocket/: README.md  index.js  package.json
cypress/e2e/: spec.cy.js  websocket.cy.js
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/public/assets/: champions.json  queues.json  summoner.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/champions/: page.tsx
frontend/src/app/prodraft/: page.tsx
frontend/src/app/summoners/: page.tsx
frontend/src/app/tierlist/: page.tsx
frontend/src/components/Hooks/: hookTools.tsx  useClient.tsx
frontend/src/components/atoms/: Text.tsx
frontend/src/components/molecules/: LabelImage.tsx
frontend/src/components/objects/: ChampionDTO.ts  ChampionMasteryDTO.js  ChampionMasteryDTO.ts  InfoDTO.ts  LeagueEntryDTO.js  LeagueEntryDTO.ts  MatchDTO.ts  MetadataDTO.js  MetadataDTO.ts  PersonnageDTO.ts  SummonerDTO.ts
(+38 files in other folders)
