[tool.poetry]
name = "backend-lol"
version = "0.1.0"
description = ""
authors = ["Alex Jiang <alex.jiang@grenoble-inp.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlalchemy = "^2.0.28"
loguru = "^0.7.2"
httpx = "^0.27.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
